# cstd

./: CMakeLists.txt  README.md  shell.nix
cstd/: CMakeLists.txt  config.h  def.h  utils.h
cstd/allocator/: allocator.h  allocator_mem_chunk.h  arena.h
cstd/src/allocator/: __arena__.h  arena.c
test/: CMakeLists.txt
